--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-particles": "^2.9.3",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^5.15.0",
     "tsparticles": "^2.9.3",
     "web-vitals": "^2.1.4"
   },
