--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-particles": "^2.9.3",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
     "tsparticles": "^2.9.3",
